--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,23 +1,24 @@
-@import "fonts";
 @import "normalize";
+@import "variables";
+@import "fonts";
 @import "global";
 @import "mixins";
-@import "main-header";
-@import "main-menu";
-@import "main-footer";
-@import "large-button";
-@import "logo-wrapper";
-@import "page-title";
-@import "download-links";
-@import "contacts";
-@import "content-header";
-@import "content-footer";
-@import "features";
-@import "gallery";
-@import "large-logo";
-@import "note";
-@import "page-title";
-@import "reviews";
-@import "social-links";
-@import "tariff";
-@import "developed-by";
+@import "blocks/main-header";
+@import "blocks/main-menu";
+@import "blocks/main-footer";
+@import "blocks/large-button";
+@import "blocks/logo-wrapper";
+@import "blocks/page-title";
+@import "blocks/download-links";
+@import "blocks/contacts";
+@import "blocks/content-header";
+@import "blocks/content-footer";
+@import "blocks/features";
+@import "blocks/gallery";
+@import "blocks/large-logo";
+@import "blocks/note";
+@import "blocks/page-title";
+@import "blocks/reviews";
+@import "blocks/social-links";
+@import "blocks/tariff";
+@import "blocks/developed-by";
