social-links gallery panorama tablet + desktop panorama mobile 24hours block features block page-title + download-links page-title page-title картинка на основной странице header на остальных страницах header на главной странице - интерактивное меню - отсупы

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -21,6 +21,8 @@
 
 .contacts__list-item {
   .reset-list-item();
+  padding-right: @indent-horizontal;
+  padding-left: @indent-horizontal;
 }
 
 .contacts__address-map {
