--- a/source/less/blocks/content-header.less
+++ b/source/less/blocks/content-header.less
@@ -1,6 +1,5 @@
 .content-header {
-  padding-top: 55px;
-  padding-bottom: 55px;
+  padding: 55px @indent-horizontal;
   line-height: 2.143;
   text-align: center;
 }
