--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -5,4 +5,15 @@
   text-align: center;
   padding-top: 40px;
   padding-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 620px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 940px;
+  }
 }
