--- a/source/less/blocks/tariff.less
+++ b/source/less/blocks/tariff.less
@@ -30,7 +30,7 @@
 .tariff__header {
   display: flex;
   flex-direction: column;
-  background-color: @bg-dark-blue;
+  background-color: @dark-blue;
 }
 
 .tariff__table-row {
