--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,11 +3,11 @@
 @import "fonts";
 @import "global";
 @import "mixins";
+@import "blocks/main-content";
 @import "blocks/main-header";
 @import "blocks/main-menu";
 @import "blocks/main-footer";
 @import "blocks/large-button";
-@import "blocks/logo-wrapper";
 @import "blocks/page-title";
 @import "blocks/download-links";
 @import "blocks/contacts";
@@ -16,6 +16,7 @@
 @import "blocks/features";
 @import "blocks/gallery";
 @import "blocks/large-logo";
+@import "blocks/logo";
 @import "blocks/note";
 @import "blocks/page-title";
 @import "blocks/reviews";
