--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,10 +1,49 @@
+.gallery {
+  margin: 0 auto;
+  position: relative;
+  max-width: 320px;
+
+  @media (min-width: @mobile-width + 1) {
+    max-width: 660px;
+  }
+
+  @media (min-width: @tablet-width + 1) {
+    max-width: 1200px;
+  }
+}
+
 .gallery__list {
   .reset-list();
-  width: 320px;
+  max-width: 320px;
   margin-left: auto;
   margin-right: auto;
+
+  @media (min-width: @mobile-width + 1) {
+    max-width: 620px;
+  }
+
+  @media (min-width: @tablet-width + 1) {
+    max-width: 940px;
+  }
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .gallery__list-item {
   .reset-list-item();
+
+  @media (min-width: @tablet-width) {
+    width: 50%;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 33%;
+  }
+
+  &--panorama {
+    width: 100%;
+  }
 }
