--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -1,5 +1,24 @@
 .logo {
   position: absolute;
   top: 22px;
-  left: @ident-horizontal-small;
+  left: @indent-horizontal;
+
+  @media (min-width: @tablet-width) {
+    top: 27px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 22px;
+    position: inherit;
+  }
+}
+
+.logo__icon {
+  width: 75px;
+  height: 22px;
+
+  @media (min-width: @tablet-width) {
+    width: 147px;
+    height: 40px;
+  }
 }
