--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -1,5 +1,8 @@
 .page-title {
-  background: @bg-dark-gray url("../../img/bg-back-mobile@1x.jpg") no-repeat center;
+  background-color: @dark-gray;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
   color: @white;
   text-align: center;
   margin-top: -66px;
@@ -9,8 +12,48 @@
   &--index-page {
     height: 462px;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+
+    @media (min-width: @tablet-width) {
+      position: relative;
+      z-index: -1;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: flex-start;
+    }
+  }
+
+  @media (min-width: @mobile-width) {
+    background-image: url("../../img/bg-back-tablet@1x.jpg");
+  }
+
+  @media (min-width: @mobile-width + 1) {
+    height: 440px;
+
+    &--index-page {
+      height: 462px;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-top: -110px;
+
+    &--index-page {
+      height: 730px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    height: 394px;
+    margin-top: 0;
+
+    &--index-page {
+      height: 835px;
+    }
   }
 }
 
@@ -25,4 +68,51 @@
   padding-top: calc(35px + 66px);
   padding-left: 20px;
   padding-right: 20px;
+
+  @media (min-width: @mobile-width + 1) {
+    padding-top: calc(110px + 80px);
+  }
+
+  @media (min-width: @tablet-width) {
+    font-size: 50px;
+    line-height: 1.2;
+    max-width: 679px;
+    margin: 0 auto 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: calc(110px + 77px);
+    max-width: 820px;
+  }
+}
+
+.page-title__promo-image {
+  display: flex;
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    right: -100px;
+  }
+}
+
+.page-title__wrapper {
+  @media (min-width: @tablet-width) {
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    max-width: 780px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    align-items: self-end;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 960px;
+  }
 }
