--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,6 +1,6 @@
 .review__title {
   color: @black;
-  background-color: @bg-white;
+  background-color: @white;
   font-size: 18px;
   font-weight: bold;
   line-height: 1.667;
@@ -8,7 +8,7 @@
 
 .review__text {
   color: @black;
-  background-color: @bg-white;
+  background-color: @white;
   line-height: 2.143;
   text-align: center;
 }
@@ -20,6 +20,8 @@
 .reviews__list-item {
   .reset-list-item();
   text-align: center;
+  padding-right: @indent-horizontal;
+  padding-left: @indent-horizontal;
 }
 
 .reviews__toggle {
