--- a/source/less/blocks/social-links.less
+++ b/source/less/blocks/social-links.less
@@ -16,6 +16,10 @@
   border-radius: 50%;
   margin: 40px 6px;
 
+  @media (min-width: @tablet-width) {
+    margin: 0 6px;
+  }
+
   &:hover {
     border-color: @dark-blue;
   }
