--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,17 +1,28 @@
-@bg-white: #ffffff;
-@bg-light-gray: #f2f2f2;
-@bg-dark-gray: #1d2631;
-@bg-dark-blue: #283645;
-
 @white: #ffffff;
 @pink: #d22856;
 @dark-blue: #283645;
-@black: #000000;
 @light-blue: #485461;
+
+@black: #000000;
+@dark-gray: #1d2631;
 @gray: #bec2c7;
+@gray-medium: #dedede;
 @light-gray: #e9ebec;
+@super-light-gray: #f2f2f2;
 
-@ident-horizontal-small: 20px;
 
-@tablet-width: 768px;
+@blackout-color: rgba(0, 0, 0, 0.3);
+
+@indent-horizontal: 20px;
+@indent-horizontal-small: 10px;
+
+@max-content-width: 960px;
+@max-desktop-width: 940px;
+@max-tablet-width: 620px;
+@max-menu-width: 650px;
+
+@tablet-section-width: 300px;
+
+@mobile-width: 320px;
+@tablet-width: 660px;
 @desktop-width: 1200px;
