--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -21,6 +21,6 @@
     justify-content: space-between;
     .full-width();
     padding: 0 @indent-horizontal-small;
-    max-width: @max-content-width;
+    max-width: @max-desktop-width-with-paddings;
   }
 }
