--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -16,7 +16,7 @@
 @indent-horizontal: 20px;
 @indent-horizontal-small: 10px;
 
-@max-content-width: 960px;
+@max-desktop-width-with-paddings: 960px;
 @max-desktop-width: 940px;
 @max-tablet-width: 620px;
 @max-menu-width: 650px;
