--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -18,12 +18,13 @@
   margin-left: auto;
   margin-right: auto;
 
-  @media (min-width: @mobile-width + 1) {
-    max-width: 620px;
+  @media (min-width: @tablet-width) {
+    max-width: 660px;
+    padding: 0 10px;
   }
 
-  @media (min-width: @tablet-width + 1) {
-    max-width: 940px;
+  @media (min-width: @desktop-width) {
+    max-width: 960px;
   }
 
   @media (min-width: @tablet-width) {
@@ -36,11 +37,14 @@
   .reset-list-item();
 
   @media (min-width: @tablet-width) {
-    width: 50%;
+    width: calc(50% - 20px);
+    margin: 0 10px 20px;
+    box-sizing: border-box;
+    display: flex;
   }
 
   @media (min-width: @desktop-width) {
-    width: 33%;
+    width: calc(33% - 20px);
   }
 
   &--panorama {
