--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -8,12 +8,27 @@
 
   @media (min-width: @tablet-width) {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     max-width: 620px;
+    position: relative;
   }
 
   @media (min-width: @desktop-width) {
     max-width: 940px;
+  }
+}
+
+.main-footer__logo {
+  @media(min-width: @tablet-width) {
+    position: absolute;
+    left: 0;
+  }
+}
+
+.main-footer__developed-by {
+  @media(min-width: @tablet-width) {
+    position: absolute;
+    right: 0;
   }
 }
