--- a/source/less/blocks/note.less
+++ b/source/less/blocks/note.less
@@ -1,22 +1,19 @@
 .note {
-  background-color: @super-light-gray;
   line-height: 1.714;
-  margin-bottom: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 0 25px 25px;
+
+  &--panorama {
+    padding: 0;
+    margin: 0;
+  }
 
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
-    height: calc(100% - 20px);
     padding-bottom: 0;
-    margin-bottom: 40px;
+    flex-grow: 1;
   }
 
   @media (min-width: @desktop-width) {
-    height: calc(100% - 55px);
-    margin-bottom: 75px;
   }
 }
 
@@ -34,48 +31,56 @@
   font-size: 12px;
   color: @pink;
   text-transform: uppercase;
-  line-height: 2;
-}
+  line-height: 1;
 
-.note__likes path {
-  fill: @pink;
+  @media(min-width: @tablet-width) {
+    flex-grow: 1;
+    display: flex;
+    align-items: flex-end;
+  }
+
+  path {
+    fill: @pink;
+  }
 }
 
 .note__likes-title {
   padding-left: 20px;
 }
 
-.note__image-wrapper {
-  margin-bottom: 20px;
-  text-align: center;
-
-  &--panorama {
-    margin-left: -25px;
-    margin-right: -25px;
-
-    @media (max-width: @mobile-width) {
-      height: 137px;
-    }
-
-    @media (min-width: @mobile-width) {
-      height: 509px;
-    }
-
-    @media (min-width: @desktop-width) {
-      height: 506px;
-    }
-  }
+.note__image {
+  vertical-align: bottom;
 }
 
-.note__content {
+.note__image-wrapper {
+  text-align: center;
+}
+
+.note__text {
   padding-top: 5px;
   padding-bottom: 20px;
 }
 
-.note__image {
+.note__info {
+  background-color: @super-light-gray;
+  margin: 0 20px 20px;
+  padding: 18px 20px;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
   &--panorama {
-    left: 0;
-    right: 0;
-    position: absolute;
+    .max-width();
+
+    @media (min-width: @tablet-width) {
+      margin: 0 auto 50px;
+    }
   }
 }
