--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -2,57 +2,51 @@
   background-color: @dark-gray;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   color: @white;
   text-align: center;
   margin-top: -66px;
-  height: 236px;
+  min-height: 236px;
   background-position-y: 0;
 
+  @media (min-width: @mobile-width) {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+  }
+
+  @media (min-width: @mobile-width + 1) {
+    min-height: 440px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-top: -110px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    min-height: 394px;
+    margin-top: 0;
+  }
+
   &--index-page {
-    height: 462px;
+    min-height: 462px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     flex-direction: column;
 
     @media (min-width: @tablet-width) {
+      min-height: 730px;
       position: relative;
       z-index: -1;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: flex-end;
-      align-items: flex-start;
+      align-items: flex-end;
     }
-  }
 
-  @media (min-width: @mobile-width) {
-    background-image: url("../../img/bg-back-tablet@1x.jpg");
-  }
-
-  @media (min-width: @mobile-width + 1) {
-    height: 440px;
-
-    &--index-page {
-      height: 462px;
-    }
-  }
-
-  @media (min-width: @tablet-width) {
-    margin-top: -110px;
-
-    &--index-page {
-      height: 730px;
-    }
-  }
-
-  @media (min-width: @desktop-width) {
-    background-image: url("../../img/bg-back-desktop@1x.jpg");
-    height: 394px;
-    margin-top: 0;
-
-    &--index-page {
-      height: 835px;
+    @media (min-width: @desktop-width) {
+      min-height: 853px;
+      justify-content: center;
     }
   }
 }
@@ -89,10 +83,15 @@
 .page-title__promo-image {
   display: flex;
 
+  @media(max-width: @tablet-width) {
+    padding-top: 175px;
+  }
+
   @media (min-width: @tablet-width) {
     position: absolute;
     bottom: 0;
     right: 0;
+    z-index: -1;
   }
 
   @media (min-width: @desktop-width) {
@@ -108,7 +107,7 @@
     max-width: 780px;
     display: flex;
     justify-content: space-between;
-    position: relative;
+    position: absolute;
     align-items: self-end;
   }
 
