download-links content images

--- a/source/less/blocks/download-links.less
+++ b/source/less/blocks/download-links.less
@@ -57,18 +57,6 @@
   &--main::before {
     content: unset;
   }
-
-  &--apple::before {
-    background: url("../img/logo-apple.svg") no-repeat center;
-  }
-
-  &--android::before {
-    background: url("../img/logo-android.svg") no-repeat center;
-  }
-
-  &--windows::before {
-    background: url("../img/logo-microsoft.svg") no-repeat center;
-  }
 }
 
 .download-links__list-item {
@@ -79,6 +67,7 @@
   padding-left: 12px;
   padding-top: 28px;
   margin-top: 20px;
+  align-self: flex-end;
 
   &--main {
     padding-right: 0;
