--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -3,6 +3,9 @@
 }
 
 .features__list {
+  .reset-list();
+  padding-top: 30px;
+
   @media (min-width: @tablet-width) {
     padding-left: 0;
     order: 2;
@@ -36,6 +39,7 @@
 
 .features__promo-images {
   .reset-list();
+  padding-top: 30px;
 
   @media (min-width: @tablet-width) {
     order: 1;
@@ -190,7 +194,8 @@
 }
 
 .features__header {
-  padding-top: 6px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
   @media (min-width: @tablet-width) {
     padding-top: 60px;
@@ -209,7 +214,7 @@
   text-align: center;
   color: @dark-blue;
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 11px;
 
   @media (min-width: @tablet-width) {
     font-size: 40px;
@@ -237,13 +242,13 @@
   font-weight: bold;
   line-height: 1.333;
   padding-top: 20px;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
 }
 
 .features__text {
-  line-height: 1.333;
+  line-height: 1.714;
   padding-top: 10px;
-  padding-bottom: 20px;
+  padding-bottom: 13px;
   overflow-wrap: break-word;
 
   @media (min-width: @desktop-width) {
