--- a/source/less/blocks/large-button.less
+++ b/source/less/blocks/large-button.less
@@ -5,11 +5,11 @@
   text-align: center;
   border-width: 3px;
   border-style: solid;
-  border-radius: calc(3px + 25px);
+  border-radius: 28px;
   padding-left: 35px;
   padding-right: 35px;
-  padding-top: calc(25px - 9px);
-  padding-bottom: calc(25px - 9px);
+  padding-top: 16px;
+  padding-bottom: 13px;
   margin: 20px 0;
 }
 
