--- a/source/less/blocks/main-menu.less
+++ b/source/less/blocks/main-menu.less
@@ -65,6 +65,10 @@
   border-top: solid @light-blue 2px;
   border-bottom: solid @black 1px;
 
+  &:last-of-type {
+    border-bottom-width: 1px;
+  }
+
   @media (min-width: @desktop-width) {
     background-color: transparent;
     font-weight: unset;
