--- a/source/less/blocks/download-links.less
+++ b/source/less/blocks/download-links.less
@@ -1,6 +1,6 @@
 .download-links {
   background-color: @dark-gray;
-  padding-bottom: 35px;
+  padding-bottom: 30px;
 
   @media(max-width: @tablet-width) {
     width: 100%;
@@ -31,7 +31,7 @@
   color: @white;
   line-height: 1.714;
   text-align: center;
-  padding-top: 28px;
+  padding-top: 20px;
   padding-right: @indent-horizontal;
   padding-left: @indent-horizontal;
 }
@@ -44,19 +44,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-.download-links__link {
-  &::before {
-    content: "";
-    display: block;
-    height: 60px;
-    width: 50px;
-  }
-
-  &--main::before {
-    content: unset;
-  }
 }
 
 .download-links__list-item {
@@ -72,6 +59,8 @@
   &--main {
     padding-right: 0;
     padding-left: 0;
+    padding-top: 27px;
+    margin-top: 20px;
     width: 280px;
   }
 }
